--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@som/blog",
   "version": "1.3.1",
-  "license": "MIT",
   "description": "DEBUG=nuxt:* nuxt dev 会打开 tailwindcss debug 模式，大量的 Source path 和JIT TOTAL,简直了",
+  "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development SLS_ENV=dev nuxt dev",
     "serve": "npm run dev",
@@ -75,14 +75,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
-    "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-transform-runtime": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@icebreakers/deploy": "^0.1.5",
-    "@nicolo-ribaudo/semver-v6": "^6.3.3",
     "@nuxt/types": "^2.17.3",
     "@nuxtjs/composition-api": "^0.33.1",
-    "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@types/file-saver": "^2.0.7",
     "@types/offscreencanvas": "^2019.7.3",
@@ -92,44 +89,31 @@
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-import": "^1.13.8",
-    "cli-progress": "^3.12.0",
     "cos-nodejs-sdk-v5": "^2.13.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "glob": "^10.3.10",
     "klaw": "^4.1.0",
     "less": "^4.2.0",
     "less-loader": "^7.0.0",
     "postcss": "^8.4.35",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.4.1",
     "reading-time": "^1.5.0",
     "sass": "1.71.0",
     "sass-loader": "^10.0.0",
     "serverless-config-generator": "^2.0.0",
     "serverless-layer-deployer": "^0.3.0",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "stylelint": "^16.2.1",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recommended-scss": "^14.0.0",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-scss": "^6.1.0",
     "tailwind-config-viewer": "^1.7.3",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-patch": "^2.2.3",
     "tencentcloud-sdk-nodejs": "^4.0.795",
     "unplugin-tailwindcss-mangle": "^2.2.2",
-    "vitest": "^0.34.6",
     "worker-loader": "^3.0.8"
   },
   "resolutions": {
     "vue": "^2.7",
-    "vue-template-compiler": "^2.7",
-    "vue-server-renderer": "^2.7"
+    "vue-server-renderer": "^2.7",
+    "vue-template-compiler": "^2.7"
   }
 }
