--- a/package.json
+++ b/package.json
@@ -26,34 +26,40 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
-    "@commitlint/cli": "^19.3.0",
+    "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/prompt-cli": "^19.3.1",
+    "@commitlint/prompt-cli": "^19.4.0",
     "@commitlint/types": "^19.0.3",
-    "@icebreakers/eslint-config": "^0.3.14",
+    "@icebreakers/eslint-config": "^0.3.20",
     "@types/fs-extra": "^11.0.4",
+    "@types/get-value": "^3.0.5",
     "@types/lint-staged": "^13.3.0",
     "@types/lodash": "^4.17.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.12",
-    "@vitest/coverage-v8": "^2.0.4",
+    "@types/node": "^22.4.0",
+    "@types/set-value": "^4.0.3",
+    "@vitest/coverage-v8": "^2.0.5",
     "ci-info": "^4.0.0",
-    "eslint": "^9.8.0",
+    "defu": "^6.1.4",
+    "eslint": "^9.9.0",
     "fs-extra": "^11.2.0",
-    "husky": "^9.1.3",
-    "lint-staged": "^15.2.7",
+    "get-value": "^3.0.1",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "only-allow": "^1.2.1",
     "pathe": "^1.1.2",
+    "pkg-types": "^1.1.3",
+    "set-value": "^4.1.0",
     "tslib": "^2.6.3",
-    "tsup": "^8.2.3",
-    "tsx": "^4.16.2",
-    "turbo": "^2.0.9",
+    "tsup": "^8.2.4",
+    "tsx": "^4.17.0",
+    "turbo": "^2.0.14",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^2.0.4"
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.0.5"
   },
   "publishConfig": {
     "access": "public",
