--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@som/blog",
   "version": "1.3.1",
+  "packageManager": "yarn@1.22.22",
   "description": "DEBUG=nuxt:* nuxt dev 会打开 tailwindcss debug 模式，大量的 Source path 和JIT TOTAL,简直了",
   "license": "MIT",
   "scripts": {
@@ -34,7 +35,7 @@
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/tailwindcss": "^5.3.3",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/typography": "^0.5.10",
     "@types/qrcode": "^1.5.5",
@@ -115,6 +116,5 @@
     "vue": "^2.7",
     "vue-server-renderer": "^2.7",
     "vue-template-compiler": "^2.7"
-  },
-  "packageManager": "yarn@1.22.22"
+  }
 }
