--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,7 +3,7 @@
   "changelog": [
     "@changesets/changelog-github",
     {
-      "repo": "sonofmagic/monorepo-template"
+      "repo": "sonofmagic/icebreaker.top"
     }
   ],
   "commit": false,
