--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -10,6 +10,7 @@
     "sync": "node scripts/syncArticles.js",
     "analyze": "cross-env SLS_ENV=release nuxt build --analyze",
     "generate": "cross-env SLS_ENV=release NODE_ENV=production nuxt generate",
+    "build": "npm run generate",
     "deploy:cos": "npm run generate && ice-deploy -c --dir docs",
     "check:upgrade": "yarn upgradeInteractive --latest",
     "sls:info": "components info",
@@ -19,8 +20,6 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@babel/helper-explode-assignable-expression": "^7.18.6",
-    "@babel/runtime": "^7.23.2",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -63,9 +62,6 @@
     "vue-relation-graph": "1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/plugin-transform-runtime": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
     "@icebreakers/deploy": "^0.1.5",
     "@nuxt/types": "^2.17.3",
     "@nuxtjs/composition-api": "^0.33.1",
