--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "@som/blog",
-  "version": "1.3.1",
-  "packageManager": "yarn@1.22.22",
-  "description": "DEBUG=nuxt:* nuxt dev 会打开 tailwindcss debug 模式，大量的 Source path 和JIT TOTAL,简直了",
+  "name": "@icebreakers/blog",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development SLS_ENV=dev nuxt dev",
@@ -11,7 +9,7 @@
     "analyze": "cross-env SLS_ENV=release nuxt build --analyze",
     "generate": "cross-env SLS_ENV=release NODE_ENV=production nuxt generate",
     "build": "npm run generate",
-    "deploy:cos": "npm run generate && ice-deploy -c --dir docs",
+    "deploy:cos": "npm run generate && ice-deploy -c --dir dist",
     "check:upgrade": "yarn upgradeInteractive --latest",
     "sls:info": "components info",
     "gen:theme": "node scripts/theme.js",
@@ -57,7 +55,6 @@
     "uuid": "^9.0.1",
     "vant": "^2.12.39",
     "vue": "^2.7",
-    "vue-aplayer": "^1.6.1",
     "vue-echarts": "6.6.1",
     "vue-frame-selection": "^1.0.1",
     "vue-relation-graph": "1.0.0",
