--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'true'
-          # token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_TOKEN }}
       - uses: pnpm/action-setup@v4
 
       - name: Setup Node.js environment
@@ -37,7 +37,7 @@ jobs:
         with:
           publish-dir: blog-archived/dist
           production-branch: master
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PERSONAL_TOKEN }}
           deploy-message: Deploy from GitHub Actions
           enable-pull-request-comment: false
           enable-commit-comment: true
