--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'true'
-          token: ${{ secrets.PERSONAL_TOKEN }}
+          ssh-key: ${{ secrets.SSH_KEY }}
       - uses: pnpm/action-setup@v4
 
       - name: Setup Node.js environment
