--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^2.0.9",
+    "@giscus/vue": "^3.0.0",
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/proxy": "^2.1.0",
@@ -40,7 +41,6 @@
     "element-ui": "^2.15.14",
     "file-saver": "^2.0.5",
     "giscus": "^1.5.0",
-    "github-repository-distributor": "^1.1.1",
     "gsap": "^3.12.2",
     "is-mobile": "^4.0.0",
     "js-base64": "^3.7.5",
@@ -64,7 +64,7 @@
   "devDependencies": {
     "@icebreakers/deploy": "^0.1.5",
     "@nuxt/types": "^2.17.3",
-    "@nuxtjs/composition-api": "^0.33.1",
+    "@nuxtjs/composition-api": "^0.34.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@types/file-saver": "^2.0.7",
     "@vue/composition-api": "^1.7.2",
@@ -72,7 +72,6 @@
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-import": "^1.13.8",
-    "cos-nodejs-sdk-v5": "^2.13.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "glob": "^10.3.10",
@@ -88,9 +87,8 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-config-viewer": "^2.0.4",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.10",
     "tailwindcss-patch": "^4.0.0",
-    "tencentcloud-sdk-nodejs": "^4.0.795",
     "unplugin-tailwindcss-mangle": "^3.0.1",
     "vue-server-renderer": "^2.7",
     "vue-template-compiler": "^2.7",
