--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.8.0",
+  "packageManager": "pnpm@9.9.0",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -22,38 +22,41 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.7",
-    "@commitlint/cli": "^19.4.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/prompt-cli": "^19.4.0",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
+    "@commitlint/prompt-cli": "^19.4.1",
     "@commitlint/types": "^19.0.3",
-    "@icebreakers/eslint-config": "^0.3.23",
+    "@icebreakers/eslint-config": "^0.4.0",
+    "@icebreakers/stylelint-config": "^0.0.3",
     "@types/fs-extra": "^11.0.4",
     "@types/get-value": "^3.0.5",
     "@types/klaw": "^3.0.6",
     "@types/lint-staged": "^13.3.0",
     "@types/lodash": "^4.17.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.2",
     "@types/set-value": "^4.0.3",
     "@vitest/coverage-v8": "^2.0.5",
     "ci-info": "^4.0.0",
+    "cross-env": "^7.0.3",
     "defu": "^6.1.4",
     "eslint": "^9.9.1",
     "fs-extra": "^11.2.0",
     "get-value": "^3.0.1",
     "husky": "^9.1.5",
     "klaw": "^4.1.0",
-    "lint-staged": "^15.2.8",
+    "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "only-allow": "^1.2.1",
     "pathe": "^1.1.2",
     "pkg-types": "^1.2.0",
+    "rimraf": "^6.0.1",
     "set-value": "^4.1.0",
     "tslib": "^2.7.0",
     "tsup": "^8.2.4",
-    "tsx": "^4.18.0",
-    "turbo": "^2.0.14",
+    "tsx": "^4.19.0",
+    "turbo": "^2.1.1",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vite-tsconfig-paths": "^5.0.1",
