--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -63,6 +63,8 @@
   },
   "devDependencies": {
     "@icebreakers/deploy": "^0.1.5",
+    "@iconify-json/line-md": "^1.2.1",
+    "@iconify/tailwind": "^1.1.3",
     "@nuxt/types": "^2.17.3",
     "@nuxtjs/composition-api": "^0.34.0",
     "@nuxtjs/google-analytics": "^2.4.0",
@@ -78,7 +80,7 @@
     "klaw": "^4.1.0",
     "less": "^4.2.0",
     "less-loader": "^7.0.0",
-    "postcss": "^8.4.44",
+    "postcss": "^8.4.45",
     "reading-time": "^1.5.0",
     "sass": "1.77.8",
     "sass-loader": "^10.0.0",
