--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "publish-packages": "turbo run build lint test && changeset version && changeset publish",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
-    "commit": "commit"
+    "commit": "commit",
+    "script:init": "tsx scripts/monorepo/init.ts",
+    "script:sync": "tsx scripts/monorepo/sync.ts",
+    "script:clean": "tsx scripts/monorepo/clean.ts"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.8",
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
-    "@commitlint/prompt-cli": "^19.4.1",
-    "@commitlint/types": "^19.0.3",
-    "@icebreakers/eslint-config": "^0.4.1",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/prompt-cli": "^19.5.0",
+    "@commitlint/types": "^19.5.0",
+    "@icebreakers/eslint-config": "^0.4.4",
     "@icebreakers/stylelint-config": "^0.0.3",
-    "@pnpm/workspace.find-packages": "^4.0.9",
+    "@pnpm/workspace.find-packages": "^4.0.10",
     "@types/fs-extra": "^11.0.4",
     "@types/get-value": "^3.0.5",
     "@types/git-url-parse": "^9.0.3",
@@ -37,13 +40,13 @@
     "@types/lodash": "^4.17.7",
     "@types/lodash-es": "^4.17.12",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.5.3",
+    "@types/node": "^22.5.4",
     "@types/set-value": "^4.0.3",
     "@vitest/coverage-v8": "^2.0.5",
     "ci-info": "^4.0.0",
     "cross-env": "^7.0.3",
     "defu": "^6.1.4",
-    "eslint": "^9.9.1",
+    "eslint": "^9.10.0",
     "execa": "^9.3.1",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
@@ -65,7 +68,7 @@
     "tsup": "^8.2.4",
     "tsx": "^4.19.0",
     "turbo": "^2.1.1",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "unbuild": "^2.0.0",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5",
