--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.10.0",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -20,7 +20,8 @@
     "commit": "commit",
     "script:init": "tsx scripts/monorepo/init.ts",
     "script:sync": "tsx scripts/monorepo/sync.ts",
-    "script:clean": "tsx scripts/monorepo/clean.ts"
+    "script:clean": "tsx scripts/monorepo/clean.ts",
+    "script:mirror": "tsx scripts/monorepo/binaryMirror.ts"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
@@ -29,7 +30,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@commitlint/prompt-cli": "^19.5.0",
     "@commitlint/types": "^19.5.0",
-    "@icebreakers/eslint-config": "^0.4.4",
+    "@icebreakers/eslint-config": "^0.5.1",
     "@icebreakers/stylelint-config": "^0.0.3",
     "@pnpm/workspace.find-packages": "^4.0.10",
     "@types/fs-extra": "^11.0.4",
@@ -40,19 +41,20 @@
     "@types/lodash": "^4.17.7",
     "@types/lodash-es": "^4.17.12",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "@types/set-value": "^4.0.3",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/coverage-v8": "~2.0.5",
     "ci-info": "^4.0.0",
+    "comment-json": "^4.2.5",
     "cross-env": "^7.0.3",
     "defu": "^6.1.4",
     "eslint": "^9.10.0",
-    "execa": "^9.3.1",
+    "execa": "^9.4.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "get-value": "^3.0.1",
     "git-url-parse": "^15.0.0",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "klaw": "^4.1.0",
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
@@ -65,13 +67,13 @@
     "set-value": "^4.1.0",
     "simple-git": "^3.26.0",
     "tslib": "^2.7.0",
-    "tsup": "^8.2.4",
-    "tsx": "^4.19.0",
-    "turbo": "^2.1.1",
+    "tsup": "^8.3.0",
+    "tsx": "^4.19.1",
+    "turbo": "^2.1.2",
     "typescript": "^5.6.2",
     "unbuild": "^2.0.0",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5",
+    "vitest": "~2.0.5",
     "yaml": "^2.5.1"
   },
   "publishConfig": {
