--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -89,6 +89,7 @@
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.14",
     "tailwindcss-patch": "^4.0.0",
+    "theme-transition": "^0.0.4",
     "unplugin-tailwindcss-mangle": "^3.0.1",
     "vue-server-renderer": "^2.7",
     "vue-template-compiler": "^2.7",
