--- a/package.json
+++ b/package.json
@@ -79,7 +79,10 @@
       "vue": "^2.7",
       "vue-server-renderer": "^2.7",
       "vue-template-compiler": "^2.7"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "workerd"
+    ]
   },
   "resolutions": {
     "vue": "^2.7",
